# Zenroom

./: .releaserc  CHANGELOG.md  Makefile  package.json  test.sh
.github/workflows/: main.yml  version.yml
.reuse/: dep5
bindings/javascript/: package.json
bindings/javascript/src/: index.spec.ts
bindings/python3/: pyproject.toml  setup.py
bindings/python3/personal_zenroom/: __init__.py  __init__.pyi  zenroom.py
bindings/python3/tests/: test_all.py
lib/argon2/: Makefile
src/: Makefile  zencode-exec.c  zenroom.c
src/lua/: zencode_bitcoin.lua  zencode_when.lua  zenroom_common.lua
test/zencode/: bitcoin.bats
