[tool.poetry]
name = "Zenroom"
version = "0.1.0"
description = "Small, secure and portable virtual machine for data processing"
authors = ["matteo-cristino <cristino.matteo97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-semantic-release = "^7.32.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "next"                             # branch to make releases of
changelog_file = "../../CHANGELOG.md"       # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = false                   # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = false                   # patch release by default
commit_subject = "chore(python): bump to v{version} [SKIP CI]"